add support for ceryon
Starts with machine e4hdultra

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,13 +5,13 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*.bb ${LAYERDIR}/recipes-*/*.bbappend \
             ${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "gfutures-layer"
-BBFILE_PATTERN_gfutures-layer := "^${LAYERDIR}/"
-BBFILE_PRIORITY_gfutures-layer = "6"
+BBFILE_COLLECTIONS += "ceryon-layer"
+BBFILE_PATTERN_ceryon-layer := "^${LAYERDIR}/"
+BBFILE_PRIORITY_ceryon-layer = "7"
 
-LAYERSERIES_COMPAT_gfutures-layer = "gatesgarth"
+LAYERSERIES_COMPAT_ceryon-layer = "gatesgarth"
 
 # Additional license settings
-LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
-LICENSE_PATH += "${YOCTO_BASEDIR}/meta-neutrino/custom-licenses"
+#LICENSE_PATH += "${LAYERDIR}/files/custom-licenses"
+#LICENSE_PATH += "${YOCTO_BASEDIR}/meta-neutrino/custom-licenses"
 LICENSE_FLAGS_WHITELIST = "commercial"
