--- a/example_neutrino/bblayers.conf.sample
+++ b/example_neutrino/bblayers.conf.sample
@@ -8,7 +8,7 @@ BBFILES ?= ""
 BBLAYERS ?= " \
   ##COREBASE##/meta \
   ##COREBASE##/meta-yocto-bsp \
-  ##COREBASE##/meta-gfutures \
+  ##COREBASE##/meta-ceryon \
   ##COREBASE##/meta-neutrino \
   "
 
